--- a/src/RandomColorSqare/RandomColorSquare.css
+++ b/src/RandomColorSqare/RandomColorSquare.css
@@ -2,4 +2,14 @@
     width: 200px;
     height: 200px;
     border: 2px solid black;
+    
+}
+.background {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: black;
+    height: 400px;
+    color: white;
 }
